codama-macros/tests/codama_attribute/values_nodes/public_key_value_node/too_many_inputs.fail.stderr
error: public_key is already set
 --> tests/codama_attribute/values_nodes/public_key_value_node/too_many_inputs.fail.rs:3:45
  |
3 | #[codama(default_value = public_key("1111", "2222"))]
  |                                             ^^^^^^
