codama-macros/tests/codama_attribute/values_nodes/public_key_value_node/too_many_inputs.fail.rs
use codama_macros::codama;

#[codama(default_value = public_key("1111", "2222"))]
pub struct Test;

fn main() {}
